# meditrack-project

./: .env copy  .gitignore  README.md  Rapport.md  docker-compose.yml
meditrcak/: .dockerignore  .gitignore  Dockerfile  README.md  automated_reminder_scheduler.py  generate_scheduled_reminders.py  main.py  process_reminders.py  pyproject.toml  requirements.txt  start_reminder_scheduler.py
meditrcak/app/: __init__.py
meditrcak/app/adherence/: __init__.py  models.py  routes.py  schemas.py  services.py
meditrcak/app/agent/: admin_agent.py  agent.py  agent_dispatcher.py  memory.py  multimodal_handler.py  patient_agent.py  prompt.py  router.py
meditrcak/app/analytics/: __init__.py
meditrcak/app/auth/: models.py  routes.py  schemas.py  services.py  utils.py
meditrcak/app/chat/: __init__.py  models.py  services.py
meditrcak/app/config/: settings.py
meditrcak/app/database/: db.py  init_db.py  init_testagent_db.py
meditrcak/app/medications/: __init__.py  models.py  routes.py  schemas.py  seed_data.py  services.py
meditrcak/app/patients/: models.py  routes.py  schemas.py  services.py
meditrcak/app/reminders/: __init__.py  models.py  routes.py  schemas.py  services.py
meditrcak/tests/: conftest.py  test_adherence.py  test_agent.py  test_agent_api.py  test_agent_core.py  test_agent_multimodal.py  test_auth.py  test_auth_new.py  test_medications.py  test_medications_simple.py  test_patients.py  test_patients_new.py  test_reminder_models.py  test_reminder_routes.py  test_reminder_service_comprehensive.py  test_reminder_services.py  test_reminders.py
(+204 files in other folders)
